--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -52,7 +52,7 @@
                     <img class="uk-margin uk-margin-remove" width="200" height="40" alt="logo" th:src="@{/img/logo.svg}"/>
                 </div>
                 <form  class="uk-form" action="/loginProcess" method="post">
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
                     <h2 class="uk-margin-large-bottom uk-text-muted">Log in</h2>
                     <div class="uk-form-row">
                         <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
