--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,12 +18,13 @@
 
     <!-- If you'd like to support IE8 -->
     <script th:src="@{/js/jquery.js}"></script>
-    <script th:src="@{/js/uikit.min.js}"></script>
-    <script th:src="@{/js/components/grid.min.js}"></script>
+    <script th:src="@{/js/uikit.js}"></script>
+    <script th:src="@{/js/components/grid.js}"></script>
     <script th:src="@{/js/core/nav.min.js}"></script>
     <script th:src="@{/js/components/pagination.js}"></script>
-    <script th:src="@{/js/video.js}"></script>
-    <script th:src="@{/js/video-ie8.js}"></script>
+    <script src="http://vjs.zencdn.net/5.10.7/video.js"></script>
+    <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+
 </head>
 <body>
 <header th:replace="fragments/header :: header">
