--- a/src/main/resources/templates/pages/main.html
+++ b/src/main/resources/templates/pages/main.html
@@ -15,7 +15,12 @@
 
     <!--     Theme CSS   -->
     <link rel="stylesheet" th:href="@{/css/theme.css}"/>
-
+    <style>
+        .cover-img {
+            width:100%;
+            height:100%;
+        }
+    </style>
 </head>
 <body layout:fragment="content">
 
@@ -28,22 +33,21 @@
         <div id="tm-right-section" class="uk-width-large-1-1 uk-width-medium-1-1"  data-uk-scrollspy="{cls:'uk-animation-fade', target:'img'}">
             <div id="uk-grid" class="uk-grid-width-small-1-3 uk-grid-width-medium-1-4 uk-grid-width-large-1-5"  >
                 <div class="view" th:each="video, index : ${videos}" th:id="@{''+paging-+''+${index.count}}" th:attr="video-seq=${video.video_seq}">
-                    <div class="uk-overlay uk-overlay-hover">
+                    <div class="uk-overlay uk-overlay-hover" style="width:100%; height:300px;">
                         <img class="cover-img" alt="Image" />
                         <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background  uk-overlay-icon"></div>
                         <a class="uk-position-cover" th:href="@{'/media/list/' + ${video.video_seq}}"></a>
                     </div>
                     <div class="uk-panel" >
-
                         <h5 class="uk-panel-title" th:text="${video.title3}"></h5>
                         <p>
-                                        <span class="rating">
-                                            <i class="uk-icon-star"></i>
-                                            <i class="uk-icon-star"></i>
-                                            <i class="uk-icon-star"></i>
-                                            <i class="uk-icon-star"></i>
-                                            <i class="uk-icon-star"></i>
-                                        </span>
+                            <span class="rating">
+                                <i class="uk-icon-star"></i>
+                                <i class="uk-icon-star"></i>
+                                <i class="uk-icon-star"></i>
+                                <i class="uk-icon-star"></i>
+                                <i class="uk-icon-star"></i>
+                            </span>
                             <span class="uk-float-right">2016</span>
                         </p>
                     </div>
