--- a/src/main/resources/templates/pages/main.html
+++ b/src/main/resources/templates/pages/main.html
@@ -20,6 +20,11 @@
             width:100%;
             height:100%;
         }
+
+        .view {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     </style>
 </head>
 <body layout:fragment="content">
@@ -32,14 +37,14 @@
 
         <div id="tm-right-section" class="uk-width-large-1-1 uk-width-medium-1-1"  data-uk-scrollspy="{cls:'uk-animation-fade', target:'img'}">
             <div id="uk-grid" class="uk-grid-width-small-1-3 uk-grid-width-medium-1-4 uk-grid-width-large-1-5"  >
-                <div class="view" th:each="video, index : ${videos}" th:id="@{''+paging-+''+${index.count}}" th:attr="video-seq=${video.video_seq}">
+                <div class="view" th:each="videoKind, index : ${videoKinds}" th:id="@{''+paging-+''+${index.count}}" th:attr="video-kind-seq=${videoKind.video_kind_seq}">
                     <div class="uk-overlay uk-overlay-hover" style="width:100%; height:300px;">
-                        <img class="cover-img" alt="Image" />
+                        <img class="cover-img" alt="Image" th:src="@{'/viewer/cover/'+${videoKind.video_kind_seq}}"/>
                         <div class="uk-overlay-panel uk-overlay-fade uk-overlay-background  uk-overlay-icon"></div>
-                        <a class="uk-position-cover" th:href="@{'/media/list/' + ${video.video_seq}}"></a>
+                        <a class="uk-position-cover" th:href="@{'/media/list/' + ${videoKind.video_kind_seq}}"></a>
                     </div>
                     <div class="uk-panel" >
-                        <h5 class="uk-panel-title" th:text="${video.title3}"></h5>
+                        <h5 class="uk-panel-title" th:text="@{${videoKind.title1} + '' + ${videoKind.title2}}"></h5>
                         <p>
                             <span class="rating">
                                 <i class="uk-icon-star"></i>
@@ -53,26 +58,6 @@
                     </div>
                 </div>
             </div>
-            <script>
-
-                $(document).ready(function() {
-                    /* 현재 활성화된 이미지만로드*/
-                    $.dynamicImageViewer = function() {
-                        $.each($('.view'), function() {
-                            var video_seq = $(this).attr('video-seq');
-                            var target = $(this).find('.cover-img');
-                            var viewEnable = $(this).css('display');
-                            if(target.attr('src') == null || target.attr('src')=="") {
-                                if(viewEnable == "" || viewEnable == 'block') {
-                                    target.attr('src', '/viewer/image/'+video_seq);
-                                }
-                            }
-
-                        })
-                    }
-                    $.dynamicImageViewer();
-                })
-            </script>
             <div class="uk-margin-large-top uk-margin-bottom">
                 <ul class="uk-pagination" >
                     <!--<li class="uk-disabled"><span><i class="uk-icon-angle-double-left"></i></span></li>-->
@@ -104,11 +89,11 @@
             var view = 20;
             var start = 0;
             if(page == 1) {
-                start = page;
+                start = 0;
             } else {
-                start = ((page -1) * view) + 1;
+                start = ((page -1) * view);
             }
-            var end = page * view;
+            var end = page * view -1;
 
             $.each($('.view'), function (i) {
                 $(this).show();
