--- a/src/main/resources/templates/pages/media.html
+++ b/src/main/resources/templates/pages/media.html
@@ -73,6 +73,13 @@
             z-index:9999999999;
         }
 
+        .fa-th-list-full {
+            top: 0px;
+            right: 0px;
+            height: 90%;
+            opacity: 0;
+        }
+
         .fa-arrow-circle-o-left {
             font-size: 2em;
             position: fixed;
@@ -116,7 +123,6 @@
         .uk-list > li > span:hover {
             color:#cccccc;
         }
-
     </style>
 
 </head>
@@ -125,7 +131,8 @@
 <!-- start Main Content (Media Page Section) -->
 
 <div id="tm-media-section" class="uk-block uk-block-small">
-    <input type="hidden" id="video_seq" th:value="${video.video_seq}"/>
+    <input type="hidden" id="video_seq" th:value="${videoLog.videosEntity.video_seq}"/>
+    <input type="hidden" id="video_kind_seq" th:value="${videoLog.videosEntity.video_kind_seq}"/>
     <div class="uk-container uk-container-center uk-width-8-10">
         <div class="media-container  uk-container-center">
             <!--<a class="uk-button uk-button-large uk-button-link uk-text-muted" href="index.html"><i class=" uk-icon-arrow-left uk-margin-small-right"></i> Back</a>-->
@@ -134,10 +141,10 @@
         <div class="uk-grid">
             <div class="uk-width-medium-3-10">
                 <div  class="media-cover" style="margin-top: 0px;">
-                    <img th:src="@{'/viewer/image/'+ ${video.video_seq}}" alt="Image" class="uk-scrollspy-inview uk-animation-fade" style="width: 400px;height: 445px;"/>
+                    <img th:src="@{'/viewer/image/'+ ${videoLog.videosEntity.video_seq}}" alt="Image" class="uk-scrollspy-inview uk-animation-fade" style="width: 400px;height: 445px;"/>
                 </div>
-                <a id="watchMeBtn" class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-margin-top"  th:attr="data-video-seq=${video.video_seq}"><i class="uk-icon-television uk-margin-small-right"></i> Watch Now</a>
-                <a id="favouriteBtn" class="uk-button uk-button-link uk-text-muted uk-button-large uk-width-1-1 uk-margin-top" href="login.html"><i class="uk-icon-heart uk-margin-small-right"></i> Add to Favourites</a>
+                <a id="watchMeBtn" class="uk-button uk-button-primary uk-button-large uk-width-1-1 uk-margin-top"  th:attr="data-video-seq=${videoLog.videosEntity.video_seq}"><i class="uk-icon-television uk-margin-small-right"></i> Watch Now</a>
+                <a id="favouriteBtn" class="uk-button uk-button-link uk-text-muted uk-button-large uk-width-1-1 uk-margin-top" ><i class="uk-icon-heart uk-margin-small-right" th:style="@{'color:'+${videoFav != null  ? videoFav.video_seq == videoLog.videosEntity.video_seq ?'red;' : '' :''}}"></i> Add to Favourites</a>
             </div>
             <div class="uk-width-medium-7-10">
                 <div class="">
@@ -153,7 +160,7 @@
                     <!--     start Tab Panel 1 (Reviews Sections) -->
 
                     <li>
-                        <h2 class="uk-text-contrast uk-margin-large-top" th:text="${video.title3}"><span class="rating uk-margin-small-left uk-h4 uk-text-warning">
+                        <h2 class="uk-text-contrast uk-margin-large-top" th:text="${videoLog.videosEntity.title3}"><span class="rating uk-margin-small-left uk-h4 uk-text-warning">
                                                 <i class="uk-icon-star "></i>
                                                 <i class="uk-icon-star"></i>
                                                 <i class="uk-icon-star"></i>
@@ -166,7 +173,7 @@
                             <li th:text="${videoKind.start_date}"></li>
                         </ul>
                         <hr/>
-                        <p class="uk-text-muted uk-h4" th:text="${video.story}"></p>
+                        <p class="uk-text-muted uk-h4" th:text="${videoLog.videosEntity.story}"></p>
                         <dl class="uk-description-list-horizontal uk-margin-top">
                             <dt>배우</dt>
                             <dd><ul class="uk-subnav ">
@@ -248,7 +255,11 @@
         <div class="uk-margin" data-uk-slideset="{small: 2, medium: 4, large: 6, autoplay:true, animation:'slide-bottom'}">
             <div class="uk-slidenav-position uk-margin">
                 <ul class="uk-slideset uk-grid uk-flex-center uk-grid-width-1-1 uk-grid-width-large-1-6 uk-grid-width-medium-1-4 uk-grid-width-small-1-2">
-                    <li th:each="vi, index : ${videos}"><a th:href="@{'/media/list/' +${vi.video_seq}}"><img th:src="@{'/viewer/image/' + ${vi.video_seq}}" th:class="${vi.video_seq == video.video_seq ? 'video-fade': ''}" style="width: 600px;height: 300px;" alt="" th:text="${vi.title3}"/></a><i th:if="${vi.video_seq == video.video_seq}" class="fa fa-play-circle-o video-play" aria-hidden="true"/></li>
+                    <li th:each="vi, index : ${videos}">
+                        <a th:href="@{'/media/slist/' +${vi.video_seq}}">
+                            <img th:src="@{'/viewer/image/' + ${vi.video_seq}}" th:style="@{'width: 600px;height: 300px; opacity:'+${vi.video_seq == videoLog.videosEntity.video_seq ? '0.1;': ''}}" alt="" th:text="${vi.title3}"/>
+                        </a>
+                    <i th:if="${vi.video_seq == videoLog.videosEntity.video_seq}" class="fa fa-play-circle-o video-play" aria-hidden="true"/></li>
                 </ul>
                 <a href="#" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideset-item="previous"></a>
                 <a href="#" class="uk-slidenav uk-slidenav-next uk-slidenav-contrast" data-uk-slideset-item="next"></a>
@@ -268,7 +279,10 @@
         <div class="play-list-menu">
             <h3 style="padding-left:10px;">재생목록</h3>
             <ul class="uk-list uk-list-line" style="padding-top:20px;">
-                <li th:class="${video.video_seq == vi.video_seq ? 'active':''}" th:each="vi, index:${videos}" th:attr="data-video-seq=${vi.video_seq}"><i class="fa fa-play-circle-o" aria-hidden="true" style="padding-left:5px;" th:if="${video.video_seq == vi.video_seq}"/><span style="padding-left:10px;" th:text="${vi.title3}"></span></li>
+                <li th:class="${videos[0].video_seq == vi.video_seq ? 'active':''}" th:each="vi, index:${videos}" th:attr="data-video-seq=${vi.video_seq}">
+                    <i class="fa fa-play-circle-o" aria-hidden="true" style="padding-left:5px;" th:if="${videos[0].video_seq == vi.video_seq}"/>
+                    <span style="padding-left:10px;" th:text="${vi.title3}"></span>
+                </li>
             </ul>
         </div>
     </div>
@@ -290,11 +304,49 @@
         var player;
 
         /* 즐겨찾기 추가 */
-//        $('#favouriteBtn').click(function() {
-//            $.ajax({
-//
-//            })
-//        })
+        $('#favouriteBtn').click(function() {
+            var video_seq = $('#video_seq').val();
+            $.ajax({
+                url:'/fav/save/'+video_seq,
+                type:'post',
+                success:function(data) {
+                    if(data == 'S') {
+                        $('.uk-icon-heart').css('color', 'red');
+                    } else {
+                        $('.uk-icon-heart').css('color', '');
+                    }
+                }, error: function(xhr, status, error) {
+                    console.log(error);
+                }
+            })
+        })
+
+        function fullScreenCheck() {
+            var flag = player.isFullscreen()
+            console.log(flag);
+            if(flag) {
+                // <![CDATA[
+                if($('.fa-th-list').attr('class').indexOf('fa-th-list-full') < 0) {
+                    $('.fa-th-list').addClass('fa-th-list-full');
+                    $('.fa-th-list').on('mouseenter', function() {
+                        console.log('111')
+                        $('.fa-th-list').trigger('click');
+                    })
+                    $('.play-list-menu').on('mouseleave', function() {
+                        $('.play-list-fade div:not(.play-list-menu)').trigger('click');
+                    })
+                }
+                // ]]>
+            } else {
+                $('.fa-th-list').removeClass('fa-th-list-full');
+                $('.fa-th-list').off('mouseenter');
+                $('.play-list-menu').off('mouseleave');
+            }
+        }
+
+        var fullCheck = setInterval(fullScreenCheck, 1000);
+
+
 
         /*video 태그 로드 완료시*/
 
@@ -331,6 +383,10 @@
             $('.video-btn-group').show();
             player.src({"type":"video/mp4", "src":url});
             player.play()
+
+            /* 로그 기록 */
+            var video_kind_seq = $('#video_kind_seq').val();
+            $.logSave(video_seq, video_kind_seq);
         })
 
         /* 플레이 리스트 다른영상 선택시*/
@@ -343,6 +399,10 @@
             var url = $.play(video_seq);
             player.src({"type":"video/mp4", "src":url});
             player.play()
+
+            /* 로그 기록 */
+            var video_kind_seq = $('#video_kind_seq').val();
+            $.logSave(video_seq, video_kind_seq);
         })
 
         /* 동영상 플레이 function*/
@@ -362,9 +422,9 @@
         }
 
         /*로그 기록*/
-        $.logSave = function(video_seq) {
+        $.logSave = function(video_seq, video_kind_seq) {
             $.ajax({
-                url:'/media/log/save/'+video_seq,
+                url:'/media/log/save/' + video_kind_seq + '/'+video_seq,
                 type:'post',
                 success:function(data) {
                     console.log(data)
@@ -391,10 +451,9 @@
                 })
             });
 
+            /*동영상 준비 완료 이벤트*/
             pla.off('loadstart').on('loadstart', function() {
-                /* 로그 기록 */
-                var video_seq = $('#video_seq').val();
-                $.logSave(video_seq);
+
             })
         }
     </script>
