--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,10 +12,10 @@
                             <li><a href="/fav/list">플레이리스트</a></li>
                             <li class="uk-nav-divider"></li>
                             <li class="nav-header">ADMIN</li>
-                            <li><a href="/WebFlix/admin/kind">카테고리</a></li>
-                            <li><a href="/WebFlix/admin/main">영화</a></li>
+                            <li><a href="/admin/kind">카테고리</a></li>
+                            <li><a href="/admin/main">영화</a></li>
                             <li class="uk-nav-divider"></li>
-                            <li><a href="/WebFlix/logout">로그아웃</a></li>
+                            <li><a href="/logout">로그아웃</a></li>
                         </ul>
                     </div>
                 </div>
