--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -8,6 +8,10 @@
     display:none;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 .video-fade >video {
     width:100%;
     height:100%;
@@ -101,4 +105,51 @@
 
 .uk-list > li > span:hover {
     color:#cccccc;
+}
+
+
+.next-movie {
+    display:none;
+    position: absolute;
+    bottom: 40px;
+    right: 0px;
+    width: 100%;
+    height: 300px;
+    z-index:10000000000;
+}
+
+.next-movie > div {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    right: 0px;
+}
+
+.next-movie img {
+    width: 500px;
+    height: 100%;
+    right: 0;
+    position: absolute;
+}
+
+.next-movie-icon {
+    position: absolute;
+    font-size: 5em;
+    right:0;
+    width: 500px;
+    height: 300px;
+    text-align: center;
+    top: 0px;
+    line-height: 300px;
+    cursor:pointer;
+}
+
+.next-movie-icon:hover {
+    opacity: 0.5;
+}
+
+.next-movie-text {
+    position:absolute;
+    top: 5px;
+    right:5px;
 }
