--- a/src/main/resources/templates/pages/fav.html
+++ b/src/main/resources/templates/pages/fav.html
@@ -89,6 +89,13 @@
             </ul>
         </div>
     </div>
+    <div class="next-movie">
+        <div>
+            <img src=""/>
+            <i class="fa fa-play-circle-o next-movie-icon" aria-hidden="true"/>
+            <div class="next-movie-text"><span>10</span>초후 자동재생됩니다.</div>
+        </div>
+    </div>
 </div>
 <!--   Include JS   -->
 
@@ -148,8 +155,11 @@
         /*뒤로가기 */
         $('.fa-arrow-circle-o-left').click(function() {
             player.pause();
+            $('html').removeClass('overflow-hidden');
+            $('footer').show();
             $('.video-fade').slideUp('slow');
             $('.video-btn-group').hide();
+            nextMovieHide();
         })
 
         /* 영상보기 클릭시 */
@@ -167,6 +177,12 @@
             $('.video-btn-group').show();
             player.src({"type":"video/mp4", "src":url});
             player.play()
+
+            /*footer 숨기기*/
+            $('footer').hide();
+
+            /* html 스크롤 없애기*/
+            $('html').addClass('overflow-hidden');
 
             /* 로그 기록 */
             $.logSave(video_seq, video_kind_seq);
@@ -226,6 +242,7 @@
                     $(this).removeClass('active');
                     if(cla == 'active') {
                         $(this).next().addClass('active').trigger('click');
+                        nextMovieHide();
                         flag = true;
                     }
                     if(flag) {
@@ -236,11 +253,51 @@
 
             /*동영상 준비 완료 이벤트*/
             pla.off('loadstart').on('loadstart', function() {
-
+                timeupdate(pla);
             })
         }
+
+        function timeupdate(pla) {
+            var timeupdateCount = 0;
+            pla.on('timeupdate', function() {
+                var duration = Math.floor(this.duration());
+                var current = Math.floor(this.currentTime());
+                // <![CDATA[
+
+                if((duration - 10) <= current) {
+                    $('.next-movie-text span').text(duration - current);
+                    if(timeupdateCount == 0) {
+                        nextMovieShow();
+                    }
+                    timeupdateCount++;
+
+                }
+                // ]]>
+            })
+        }
+
+        function nextMovieShow() {
+            var video_kind_seq = $('.play-list-menu li.active').next().attr('data-video-kind-seq');
+            var video_seq = $('.play-list-menu li.active').next().attr('data-video-seq');
+            $('.video-fade div.video-js').css({
+                'background-image':'url("/viewer/cover/'+video_kind_seq+'")',
+                'background-size':'100% 100%'
+            });
+            $('video').css({'width':'500px', 'height':'300px', 'top':'55px'});
+            $('.next-movie').show();
+            $('.next-movie img').attr('src', '/viewer/image/'+video_seq);
+        }
+
+        function nextMovieHide() {
+            $('.video-fade').children('div').css({
+                'background-image':'',
+                'background-size':''
+            });
+            $('video').css({'width':'100%', 'height':'100%', 'top':'0px'});
+            $('.next-movie').hide();
+        }
     </script>
-<!--그리드관련 스크립트-->
+    <!--그리드관련 스크립트-->
     <script>
         var grid = UIkit.grid($('#uk-grid'), {
             gutter:20,
