--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 
     <!--     Theme CSS   -->
     <link rel="stylesheet" th:href="@{/css/theme.css}"/>
+    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
     <link href="http://vjs.zencdn.net/5.10.7/video-js.css" rel="stylesheet"/>
 
     <!-- If you'd like to support IE8 -->
@@ -25,6 +26,7 @@
     <script th:src="@{/js/core/nav.min.js}"></script>
     <script th:src="@{/js/components/pagination.js}"></script>
     <script th:src="@{/js/core/dropdown.js}"></script>
+    <script th:src="@{/js/components/upload.js}"></script>
 
 </head>
 <body>
